non-msrv-tests/tests/ui/missing_comma.stderr
error: expected `;` or `,
 --> tests/ui/missing_comma.rs:2:22
  |
2 | #[derive_where(Clone Debug; T)]
  |                      ^^^^^

error: expected `,`
 --> tests/ui/missing_comma.rs:6:25
  |
6 | #[derive_where(Clone; A B)]
  |                         ^
